jdk26: harden build, imports, and project saves
Require Java 26 across launchers and package metadata, make Ant builds reproducible, and add offline regression coverage.

Remove executable remote update formulas, bound archive extraction, harden XML parsing, and restrict project deserialization.

Make saves and exports atomic, fix multi-project routing and import recovery, and replace finalizer cleanup with explicit lifecycle methods.